--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/vgeyyv307/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526039.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449400-320x200.jpg"><p align="center">川普连发多条推文指控大选计票舞弊</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525930.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/download-3-320x200.jpg"><p align="center">【直播】大选生变 摇摆州疑舞弊 法律战开打</p></a>
+<a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525930.md#1" title="【直播】大选生变 摇摆州疑舞弊 法律战开打""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526039.md#1" title="川普连发多条推文指控大选计票舞弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525819.md#1" title="加州选民彻夜盯票 发现诡异现象疑作弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_6918-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】 川普宣布在宾州等三州获胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/10/26/n12501740.md#1" title="【重播】美国大选日 17小时接力直播""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/CH_DJYArticle_1200x800_1103-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12523428.md#1" title="中共1400例伪案是如何出炉的（2）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-320x200.png">&nbsp;</a>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12521031.md#1" title="【内幕】高校内部文件泄中共无自信""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-166894743-600x400-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12523312.md#1" title="【图解】选前震撼弹 拜登电脑门事件簿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/joe-biden-dnm-djy-1104-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vgeyyv307.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525930.md#1">【直播】大选生变 摇摆州疑舞弊 法律战开打</a><br>
-:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/5/n12526096.md#1">亚利桑那州格伦代尔发现18张被盗选票</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525930.md#1">【直播】大选生变 摇摆州疑舞弊 法律战开打</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12524903.md#1">陕西铜川煤矿发生疑似瓦斯突出事故 4死4失踪</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/5/n12526096.md#1">亚利桑那州格伦代尔发现18张被盗选票</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12523612.md#1">【思想领袖】纳瓦罗：美媒成中共“有用白痴”</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526031.md#1">专家：川普团队会对迟收缺席选票的计票提诉</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526061.md#1">投资人选后追逐风险 美股三大指数强力反弹</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,868,534 人
+!共 366,869,550 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
