--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/vgeyyv307/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/vgeyyv307/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/vgeyyv307/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/vgeyyv307/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vgeyyv307/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/vgeyyv307/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520575.md#1" target="_blank">宋善：内部文件重见天日 中共迫害真相曝光</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520575.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/image-1-150x120.jpg" align ="left"></a>一个多月来，中共内部多份文件相继曝光，包括二十年前的绝密文件，都证实了中共操控国家机器、铺天盖地迫害法轮功学员的罪行，它无所不用其极的阴狠手段也难以遁形。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 4:58 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520320.md#1" target="_blank">周晓辉：美国当下三大丑闻背后都有中共鬼影</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520320.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/11/90041ea393cf4219a84ab04b947efad5-150x120.jpg" align ="left"></a>大选前的美国一点也不平静，反而是暗流涌动。11月1日，美国联邦参议员、参议院国土安全委员会主席罗恩·约翰逊在接受福克斯新闻网主持人玛丽亚采访时表示，当下有三个与亨特·拜登有关的丑闻正在发生。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 4:56 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12519946.md#1" target="_blank">【名家专栏】拜登经济的七宗罪</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12519946.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1277595185-150x120.jpg" align ="left"></a>民调显示，虽然大多数人意识到总统唐纳德?川普比拜登更有利于我们的经济发展，但许多人认为乔大叔的经济计划相对无害，不会危及就业、薪水或退休储蓄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 4:52 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520410.md#1" target="_blank">杨威：中共全会后的信息混乱透真实窘境</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520410.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1277551865-150x120.jpg" align ="left"></a>11月2日，习近平召开深化改革会议，强调“把国有企业做强做优做大”。《人民日报》发表社论，大谈所谓的“新发展格局”和市场内需，却称“量力而行”。李克强则继续自我发挥。混乱的信息，深刻揭示了中共正面临窘境，实际正在试图自保，根本谈不上所谓的发展。国际外交上难有作为，中共外交部长王毅几乎要失业了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 4:50 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520533.md#1" target="_blank">林保华：十九届五中全会的示弱与硬撑</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520533.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1158967557@1200x1200-150x120.jpg" align ="left"></a>中共的19届5中全会，依照计划在10月29日闭幕。如同中共发展经济的五年计划一样，任何政治活动计划也一定是圆满成功。同往常一样，公报一定自吹自擂一番，尤其要让习核心作为伟大人物的虚荣心感到满足。然而虽然中共声称全会完全在习近平主导下召开，可是公报内容却缺乏习近平应有的红卫兵霸气，以回避问题，显示中共的示弱。也许这就是中.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 4:34 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520493.md#1" target="_blank">也谈香港之后谁将成为下一个国际金融中心</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520493.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/c446350f9ae75b6d78c1d2f7a679fc6e-150x120.jpg" align ="left"></a>香港经历了近一两年以来的很多变化之后，其政治经济环境已经发生了巨大的变化。所谓一叶知秋，不少敏感的人已经意识到香港国际金融中心的地位很可能会逐步动摇直至走向衰落，并开始预测哪个城市将接替其位。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 4:16 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12518713.md#1" target="_blank">【名家专栏】先知、国王、圣徒和叛徒</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12518713.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1144046696-600x400-150x120.jpg" align ="left"></a>2016年唐纳德?川普（Donald Trump）竞选总统时，得到了基督教福音派教徒的大力支持，就像今年一样。我的民主党朋友们问我，一个不怎么笃信宗教、生活中有道德问题的人，如何能得到他们的支持。我承认我也感到困惑，直到我更深入地思考了这个问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 3:55 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520454.md#1" target="_blank">吴侃：《纽约时报》攻击大纪元背后的目的</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520454.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/3668f122ba8b6bfcd7abb21ee85874b5-150x120.jpg" align ="left"></a>美国大选倒计时，《纽约时报》开始向大纪元发难。表面上是大纪元客观、公正地报道了美国的选情，触动了某些人的利益。但《纽约时报》在此时发表的文章，还不只是因为美国大选，更另有目的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 3:54 AM			</td></tr>
@@ -26,11 +31,6 @@
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12516919.md#1" target="_blank">张慧东：中共五中全会为何再提备战？</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12516919.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2013/10/1306192104291657-150x120.jpg" align ="left"></a>10月29日，中共十九届五中全会结束后，中共喉舌新华社发布中共十九届五中全会会议公报，公报称“全面加强练兵备战，提高捍卫国家主权、安全、发展利益的战略能力”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:59 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12518019.md#1" target="_blank">王君：出兵朝鲜不是中国人民的意愿</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12518019.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229232266-800x450-150x120.jpg" align ="left"></a>1950年10月1日，金日成致信毛泽东，请求中共出兵援助朝鲜。同日，斯大林向毛泽东发来电报，要求中共“速派”“至少五六个师迅速推进至三八线”，并提出“中国军队可以志愿者身份出现。”第二天，中共就召开政治局扩大会议讨论出兵朝鲜问题。在10月1日和随后的几次中共最高层会议上，周恩来采取了模棱两可的立场，而其他绝大多数人都反.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:21 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517607.md#1" target="_blank">【名家专栏】美大选 恢复宪法和政治常态</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517607.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Supreme-court-1200x800-150x120.jpg" align ="left"></a>美国正在经历一场政治战争，正在进行一场可以算是我们一生中最重要的选举，有些人甚至认为这是美国历史上最重要的选举。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:19 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517181.md#1" target="_blank">唐聿：国产芯片，中共是推手还是杀手？</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517181.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-803139080-1-600x400-2-150x120.jpg" align ="left"></a>2020年以来，美国对中共偷盗国际知识产权和国防科技，威胁美国国家安全的行为不断进行打击。9月25日，美国商务部又对中国芯片产业巨头中芯国际实施制裁。10月上旬，国际评级机构标普将中芯国际“BBB-”的长期主体信用评级列入“负面信用观察名单”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:13 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517548.md#1" target="_blank">【名家专栏】美国应从本质而非表面上选择</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517548.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Trump_fist-1229259824-150x120.jpg" align ="left"></a>被普遍而准确地描绘为现代美国历史上最重要的选举即将到来。
-
-人们普遍认为这是一场非常激烈的竞选，现任总统唐纳德?川普（Donald Trump）的第一届任期无疑是美国历史上最成功的第一届任期之一，仅次于亚伯拉罕?林肯（Abraham Lincoln）、富兰克林?罗斯福（Franklin D. Roosevelt）和.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 1:23 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517335.md#1" target="_blank">张林：史丹利给员工高额补偿 让中共恼怒</a><br></h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517335.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/800px-Stanley_Plane_92_3-150x120.jpg" align ="left"></a>随着中共大势已去，经济崩溃已成必然，精明的跨国公司都在纷纷退出中国。巨头史丹利，最近也断然离开深圳。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月01日 8:14 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12519321.md#1" target="_blank">陈思敏：消费下行成趋势 中共扩大割韭菜</a><br></h3>中共十四五规划“扩大内需”，此内需与十三五之前的内需不同，想要的效果是扩大国内居民消费。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:58 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12518588.md#1" target="_blank">吐为快：无语</a><br></h3>一片沼泽岁月静，五中死寂掌声惊；
 犬儒溜须无人管，拟将清华变帝姓。
@@ -38,7 +38,5 @@
 归国不得粉红愁，留的委曲隔海倾。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 10:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12518573.md#1" target="_blank">邢天行：川普一个尚未兑现的承诺背后的较量</a><br></h3>川普在2016年参选前，承诺的许多事情都做了，比如：建边境墙、减税、增加就业、公平贸易等等。只有一件重大诺言看来是无法实现了，这就是前国务卿希拉里电邮门丑闻爆出后，川普一直宣称要把希拉里送进监狱，这也是希拉里反对派的汹涌民意。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 9:59 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12518126.md#1" target="_blank">古川：美国民主党高层与中国的新老朋友</a><br></h3>在2016年美国大选之后，不甘失败的美国民主党高层与希拉里，无中生有地炮制出“通俄门”，认定俄罗斯干涉美国大选帮助共和党总统候选人川普并使川普成功当选为美国总统。然而，经过特别检察官穆勒的一年多的调查之后，穆勒没有找到任何证据不得不承认川普没有与俄罗斯勾结，“通俄门”最终以民主党的失败政变而告终。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:29 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/10/31/n12516630.md#1" target="_blank">洪达：中共掌控电玩迷 各国国家安全亮红灯</a><br></h3>二零二零年十月二十八日，曾任职美国国家安全局（NSA）的资安专家艾特尔（Dave Aitel）与智库“新美国安全中心”（CNAS）研究员司马乔丹（Jordan Schneider）投书《华尔街日报》指出，中共掌握全球电玩市场的程度，更甚于“抖音”（TikTok）或“微信”（WeChat）等软件，这已构成重大威胁与更迫切.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 3:30 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/1/n12517454.md#1" target="_blank">小粉红到处出征惹议 中国年轻人何去何从</a><br></h3>中国的小粉红近年来很“出名”，其失当言行常常引起全球注目。10月2日，川普在推特上公布自己和夫人梅兰妮亚感染武汉肺炎的消息，新闻一出立刻成为微博热搜第一名，许多粉红五毛幸灾乐祸地表示“热烈庆祝”、“希望病毒尽快战胜川普”、“（中共）国庆礼物”等，还有商家趁机用“喜讯”、“庆祝”等词广告促销。就像“911”恐怖袭击时一样.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月01日 8:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/vgeyyv307/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/news392_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vgeyyv307/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_2.htm">https://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://github.com/vgeyyv307/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
